feat: backend server babel added

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 /node_modules
 frontend/node_modules
 api-server/node_modules
+api-server/package-lock.json
+frontend/package-lock.json
 /.pnp
 .pnp.js
 
