--- a/api-server/package.json
+++ b/api-server/package.json
@@ -18,15 +18,21 @@
 	"license": "ISC",
 	"dependencies": {
 		"babel": "^6.23.0",
+		"babel-eslint": "^10.0.1",
 		"body-parser": "^1.17.1",
 		"clone": "^2.1.1",
 		"cors": "^2.8.3",
 		"dotenv": "^4.0.0",
+		"eslint-config-prettier": "^4.0.0",
 		"express": "^4.15.2"
 	},
 	"devDependencies": {
 		"babel-cli": "^6.26.0",
 		"babel-core": "^6.26.3",
-		"babel-preset-es2015": "^6.24.1"
+		"babel-preset-es2015": "^6.24.1",
+		"eslint": "^5.13.0",
+		"eslint-config-airbnb-base": "^13.1.0",
+		"eslint-plugin-flowtype": "^3.2.1",
+		"eslint-plugin-import": "^2.16.0"
 	}
 }
