--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -45,18 +45,7 @@
 		"react/jsx-uses-vars": "error",
 		"import/prefer-default-export": 0,
 		"arrow-parens": ["error", "as-needed"],
-//		"react/no-string-refs": 0,
-//		"react/prop-types": 0,
-//		"react/no-direct-mutation-state": 0,
-//		"class-methods-use-this": 0,
-//		"react/no-array-index-key": 0,
-//		"jsx-a11y/anchor-is-valid": 0,
-//		"jsx-a11y/label-has-associated-control": 0,
-//		"jsx-a11y/label-has-for": 0,
-//		"react/forbid-prop-types": 0,
-//		"linebreak-style": 0,
-//		"react/destructuring-assignment": 0,
-//		"jsx-a11y/anchor-has-content": 0,
+		"react/forbid-prop-types": 0,
 		"max-len": [
 			"error",
 			{
@@ -107,5 +96,16 @@
 				"properties": "never"
 			}
 		]
+//		"react/no-string-refs": 0,
+//		"react/prop-types": 0,
+//		"react/no-direct-mutation-state": 0,
+//		"class-methods-use-this": 0,
+//		"react/no-array-index-key": 0,
+//		"jsx-a11y/anchor-is-valid": 0,
+//		"jsx-a11y/label-has-associated-control": 0,
+//		"jsx-a11y/label-has-for": 0,
+//		"linebreak-style": 0,
+//		"react/destructuring-assignment": 0,
+//		"jsx-a11y/anchor-has-content": 0,
 	}
 }
