--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -47,6 +47,8 @@
 		"arrow-parens": ["error", "as-needed"],
 		"react/forbid-prop-types": 0,
 		"react/destructuring-assignment": 0,
+		"jsx-a11y/label-has-for": 0,
+		"jsx-a11y/label-has-associated-control": 0,
 		"spaced-comment": 0,
 		"arrow-body-style": ["error", "as-needed"],
 		"func-style": ["error", "expression"],
